GKS/vpc.tf
# https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/google_project_service
resource "google_project_service" "compute" {
  project = "supple-defender-349711"
  service = "compute.googleapis.com"
}


# resource "google_project_service" "container" {
#   service = "container.googleapis.com"
# }

resource "google_project_service" "container" {
  project = "supple-defender-349711"
  service = "container.googleapis.com"
}


# https://registry.terraform.io/providers/hashicorp/google/latest/docs/resources/compute_network
resource "google_compute_network" "main" {
  name                            = "main"
  project                         = "supple-defender-349711"
  routing_mode                    = "REGIONAL"
  auto_create_subnetworks         = false
  mtu                             = 1460
  delete_default_routes_on_create = false

  depends_on = [
    google_project_service.compute,
    google_project_service.container
  ]
}
